Import of ILYAZ/UI-KeyboardLayout-0.67 from CPAN.
gitpan-cpan-distribution: UI-KeyboardLayout
gitpan-cpan-version:      0.67
gitpan-cpan-path:         ILYAZ/modules/UI-KeyboardLayout-0.67.tar.gz
gitpan-cpan-author:       ILYAZ
gitpan-cpan-maturity:     released

--- a/examples/izkeys-visual-maps-base.html
+++ b/examples/izkeys-visual-maps-base.html
@@ -98,9 +98,10 @@ needed key using 3–4 experiments; these heuristics are either explicitly menti
 the Latin key it is put in.</p>
 
 <p>We use <span style="background-color: gray;" class=not-surr>white outline</span> to indicate symbols
-„ ‚“ ‘ ” ’« ‹ » ›‐ – — ― ‒ ‑〃 ‵ ‶ ‷ ′ ″ ‴ ⁗ ´ which were replaced by “surrogate” symbols in the typewriter age (more about this
+„ ‚“ ‘ ” ’« ‹ » ›‐ – — ― ‒ ‑〃 ‵ ‶ ‷ ′ ″ ‴ ⁗ ´ which were replaced by “surrogate” symbols in the typewriter age (sometimes called
+<а href=http://www.shadycharacters.co.uk/2012/12/miscellany-%E2%84%96-20-on-typewriters/>the “Great Character Squeeze”</а>; more about this
 <a href=#surr>below</a>).
-In all diagrams, <span class=prefix>yellow characters</span>  denote prefix keys; other colors indicate visual bells, and 
+In all diagrams, <span class=prefix>yellow characters</span> denote prefix keys; other colors indicate visual bells, and 
 <span class=on-right-ex>characters assigned to
 <code>AltGr</code>-keys</span> (when many characters are displayed on the same key).  The meaning of background colors is the same as in <a href=coverage-1prefix-Latin.html>here</a> 
 and <a href=coverage-1prefix-Cyrillic.html>here</a>.  <span class=three-cases>This frame</span> denotes
@@ -393,10 +394,16 @@ page</a>.  (There is widespread misunderstanding of how to use еЕ/єЄ for pal
 
 <p>Positions of Greek letters with brown outline must be memorized (heuristics: θ and Q are both O with an extra stroke; y is one half of ψ).  The rest of base letters is guessable: either phonetically,
 or, if conflicts appear, visually (the base letters coincide with <a href="http://www.tavultesoft.com/keyboarddownloads/%7B4D179548-1215-4167-8EF7-7F42B9B0C2A6%7D/manual.pdf">the
-Galaxy layout</a>; the mixup of <code>χ/Χ</code> (chi; on <code>x</code>) and <code>ξ/Ξ</code> (xi; on <code>c</code>) is unfortunate, but it is shared by many other
-layouts).  Two green-outline letters pre-combined with diaeresis must also be memorized if one wants to enter
+Galaxy layout</a>).  Two green-outline letters pre-combined with diaeresis must also be memorized if one wants to enter
 monotonic Greek; <code>;</code> and <code>?</code> give the Greek flavors (<b>Trivia:</b> the latter is deprecated — use the Latin <code>;</code>
 instead). </p>
+
+<p><b>Trivia:</b> the mixup of <code>χ/Χ</code> (chi; on <code>x</code>) and <code>ξ/Ξ</code> (xi; on <code>c</code>) is
+unfortunate, but we choose it since it is shared by many other layouts.
+<a href=http://en.wikipedia.org/wiki/Space-cadet_keyboard>Space Cadet</a> and <a href=http://en.wikipedia.org/wiki/ChiWriter>ChiWriter</a>
+did it <a href=http://home.comcast.net/~mmcm/kbd/SpaceCadet.html>in a more
+logical way</a> (see <a href=http://home.comcast.net/~mmcm/kbd/SpaceCadet3.jpeg>the picture</a>), but it had a splitting of θ/ϑ and
+σ/ς (instead of our ϊ/ϋ), and a “wrong” flavor of φ/ϕ.</p>
 
 <a name=polytonic></a>
 <p>Polytonic Greek is produced with 3 prefix keys <code>\</code>, <code>[</code> and <code>]</code>.
@@ -925,7 +932,7 @@ Currently it is unclear if the general rules may be shared by all the “applica
 <li>Full coverage of double-accented letters of MES-3b;</li>
 <li>Full coverage of non-modifiers/combiners of IPA and UPA;</li>
 <li>Full coverage of obsolete-IPA and case-extended IPA;</li>
-<li>Reasonable covering of arrows (all with 4 directional variants) and all of box-drawing characters [except ┅┉┇┋] (via numeric keypad);</li>
+<li>Reasonable covering of arrows (all with 4 directional variants) and all of box-drawing characters [except ┅┉┇┋╌╍╎╏] (via numeric keypad);</li>
 <li>Latin and Cyrillic personalities (pre-release of Greek and Hebrew personality);</li>
 <li>Visual bell to report unrecognized/unsupported combinations (except for those using <code>Application-Menu</code> 
 modifier and <code>Compose</code>);</li>
